--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "projeto16-signmeasong",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=dev nodemon ./src/server.js",
