add body validation in post recommendation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
                 "js": "ignorePackages"
             }
            ],
-           "indent": ["error", 4]
+           "indent": ["error", 4],
+           "treatUndefinedAsUnspecified": false
     }
 }
