--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "NODE_ENV=prod node ./src/server.js",
     "test": "NODE_ENV=test npx jest -i",
     "test:watch": "NODE_ENV=test npx jest -i --watchAll",
-    "test:cover": "npx jest --coverage"
+    "test:coverage": "npx jest --coverage"
   },
   "keywords": [],
   "author": "",
